gcc/testsuite/rust/rustc/ui/binop/multiply-is-deref-on-rhs_dg.rs
pub fn test(y: &i32) {
    let x;
    x = ()
    *y
// { dg-error ".E0369." "" { target *-*-* } .-1 }
}

fn main() {}

